update image in markup

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               excepturi ea voluptates soluta quos.</p>
           </div>
           <div class="flow-image">
-            <img src="/assets/img/about/1.jpg" alt="office picture">
+            <img src="./assets/img/about/1.jpg" alt="office picture">
             <div class="line"></div>
           </div>
           <div class="empty"></div>
@@ -219,7 +219,7 @@
         <div class="flow-box">
           <div class="empty"></div>
           <div class="flow-image">
-            <img src="/assets/img/about/2.jpg" alt="office picture">
+            <img src="./assets/img/about/2.jpg" alt="office picture">
             <div class="line"></div>
           </div>
           <div class="details even">
@@ -239,7 +239,7 @@
               excepturi ea voluptates soluta quos.</p>
           </div>
           <div class="flow-image">
-            <img src="/assets/img/about/3.jpg" alt="office picture">
+            <img src="./assets/img/about/3.jpg" alt="office picture">
             <div class="line"></div>
           </div>
           <div class="empty"></div>
@@ -247,7 +247,7 @@
         <div class="flow-box">
           <div class="empty"></div>
           <div class="flow-image">
-            <img src="/assets/img/about/4.jpg" alt="office picture">
+            <img src="./assets/img/about/4.jpg" alt="office picture">
             <div class="line"></div>
           </div>
           <div class="details even">
